--- a/projects/mycomp/ui-sdk-moo/package.json
+++ b/projects/mycomp/ui-sdk-moo/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@mycomp/ui-sdk",
-  "version": "0.0.1",
+  "name": "ui-sdk-moo",
+  "version": "0.0.4",
   "peerDependencies": {
     "@angular/common": "^13.2.0",
     "@angular/core": "^13.2.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@ngstack/code-editor": "^5.0.0"
   }
 }
