--- a/angular.json
+++ b/angular.json
@@ -3,23 +3,23 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "@mycomp/ui-sdk": {
+    "ui-sdk-moo": {
       "projectType": "library",
-      "root": "projects/mycomp/ui-sdk",
-      "sourceRoot": "projects/mycomp/ui-sdk",
+      "root": "projects/mycomp/ui-sdk-moo",
+      "sourceRoot": "projects/mycomp/ui-sdk-moo",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "projects/mycomp/ui-sdk/ng-package.json"
+            "project": "projects/mycomp/ui-sdk-moo/ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/mycomp/ui-sdk/tsconfig.lib.prod.json"
+              "tsConfig": "projects/mycomp/ui-sdk-moo/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "projects/mycomp/ui-sdk/tsconfig.lib.json"
+              "tsConfig": "projects/mycomp/ui-sdk-moo/tsconfig.lib.json"
             }
           },
           "defaultConfiguration": "production"
@@ -27,9 +27,9 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/mycomp/ui-sdk/test.ts",
-            "tsConfig": "projects/mycomp/ui-sdk/tsconfig.spec.json",
-            "karmaConfig": "projects/mycomp/ui-sdk/karma.conf.js"
+            "main": "projects/mycomp/ui-sdk-moo/test.ts",
+            "tsConfig": "projects/mycomp/ui-sdk-moo/tsconfig.spec.json",
+            "karmaConfig": "projects/mycomp/ui-sdk-moo/karma.conf.js"
           }
         }
       }
