--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-sdk",
+  "name": "ui-sdk-moo",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,11 +7,11 @@
     "build": "run-s lib:build showcase:build",
     "test": "run-p lib:test showcase:test",
     "test-coverage": "run-p lib:test-coverage showcase:test-coverage",
-    "lib:build": "ng build @mycomp/ui-sdk",
-    "lib:watch": "ng build @mycomp/ui-sdk --watch --configuration development",
-    "lib:test": "ng test @mycomp/ui-sdk",
-    "lib:test-coverage": "ng test @mycomp/ui-sdk --no-watch --code-coverage",
-    "showcase:start-waiton": "wait-on dist/mycomp/ui-sdk/package.json && npm run showcase:start",
+    "lib:build": "ng build ui-sdk-moo",
+    "lib:watch": "ng build ui-sdk-moo --watch --configuration development",
+    "lib:test": "ng test ui-sdk-moo",
+    "lib:test-coverage": "ng test ui-sdk-moo --no-watch --code-coverage",
+    "showcase:start-waiton": "wait-on dist/mycomp/ui-sdk-moo/package.json && npm run showcase:start",
     "showcase:start": "ng serve showcase",
     "showcase:build": "ng build showcase",
     "showcase:watch": "ng build showcase --watch --configuration development",
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^15.0.1",
     "@angular/platform-browser-dynamic": "^15.0.1",
     "@angular/router": "^15.0.1",
+    "@ngstack/code-editor": "^5.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
