--- a/projects/showcase/tsconfig.app.json
+++ b/projects/showcase/tsconfig.app.json
@@ -5,11 +5,11 @@
     "outDir": "../../out-tsc/app",
     "types": [],
     "paths": {
-      "@mycomp/ui-sdk/*": [
-        "dist/mycomp/ui-sdk/*"
+      "ui-sdk-moo/*": [
+        "dist/mycomp/ui-sdk-moo/*"
       ],
-      "@mycomp/ui-sdk": [
-        "dist/mycomp/ui-sdk"
+      "ui-sdk-moo": [
+        "dist/mycomp/ui-sdk-moo"
       ]
     }
   },
