--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-      "@mycomp/ui-sdk/*": ["projects/mycomp/ui-sdk/*"],
-      "@mycomp/ui-sdk": ["projects/mycomp/ui-sdk"]
+      "ui-sdk-moo/*": ["projects/mycomp/ui-sdk-moo/*"],
+      "ui-sdk-moo": ["projects/mycomp/ui-sdk-moo"]
     },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
